# Grafika

./: .gitignore  CMakeLists.txt  LICENSE  README.md  solution_generate.bat  ts_compile.bat  ts_update.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/Grafika/: Grafika.sln
src/Grafika/Grafika/: FunctionSettings.cpp  FunctionSettings.h  FunctionSettings.ui  FunctionSyntaxDialog.h  FunctionSyntaxDialog.ui  Grafika.vcxproj  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  ts_compile.bat  ts_update.bat
src/app/: FunctionSettings.cpp  FunctionSettings.h  FunctionSettings.ui  FunctionSyntaxDialog.cpp  FunctionSyntaxDialog.h  Grafika.rc  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
src/app/Localisation/: en.ts  ru.ts
src/app/resources/: Grafika.rc  MainWindow.qrc
src/app/theme/: ConsoleStyle.qss  themes.qrc  vs-dark.qss
src/exprtk/: ExprtkWrapper.cpp  ExprtkWrapper.h
